--- a/src/style/components/_product.scss
+++ b/src/style/components/_product.scss
@@ -4,6 +4,7 @@
     margin-top: 20px;
     text-align: left;
 
+
     .item-row{
         padding-left: 5px;
 
@@ -205,7 +206,7 @@
         margin-top: 20px;
         margin-bottom: 20px;
         text-align: center;
-        background: rgb(250, 250, 250);
+        // background: rgb(250, 250, 250);
 
         .item-row{
             padding-left: 5px;
