--- a/src/style/components/_collection.scss
+++ b/src/style/components/_collection.scss
@@ -1,26 +1,12 @@
-.image-row{
-    margin-top: 20px;
-    margin-bottom: 0;
-    align-items: center;
-    height: 55rem;
-    margin-right: 0;
-    margin-left: 0;
-    .image-col{
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        position: relative;
-        .SofaImage{
-            position: absolute;
-            width: 100%;
-            margin: 0;
-            overflow: hidden;
-            background-color: #000;
-            margin: auto 0;
-        }
-        .image-center{
-            top: 25%;
-        }
+.slick-class{
+    padding: 40px;
+    .slick-slide {
+        -webkit-transition: all 0.3s ease-out;
+        transition: all 0.3s ease-out;
+    }
+    .slick-center {
+        -webkit-transform: scale(1.3);
+        transform: scale(1.3);
     }
 }
 
