feat: footer added

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,6 +29,8 @@
 @import 'components/appcontent';
 @import 'components/product';
 @import 'components/collection';
+@import 'components/footer';
+@import 'components/info';
 
 // 6. Page-specific styles
 @import
