--- a/src/style/components/_appleftsidebar.scss
+++ b/src/style/components/_appleftsidebar.scss
@@ -1,8 +1,14 @@
+.clickButton{
+    display: none;
+}
 .AppLeftSidebar{
     margin-top: 20px;
     padding-top: 10px;
     // background: rgb(253, 250, 250);
 
+    .Filter-Close{
+        display: none;
+    }
     h1{
         font-size: 130%;
     }
@@ -169,51 +175,16 @@
 }
 
 
+/*
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
 
-@media only screen and (max-width: 1023px){
-    .AppLeftSidebar{
-        .Colors{
-            .ColorIcons{
-                i{
-                    padding: 10px;
-                }
-            }
+@media (min-width: 1281px) {
+    .AppLeftSidebarRemove{
+        .Filter-Close{
+            display: none;
         }
-    }
-    .AppLeftSidebarRemove{
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 2560px){
-    .clickButton{
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1440px){
-    .clickButton{
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1024px){
-    .clickButton{
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 768px){
-    .clickButton{
-        display: none;
-    }
-}
-
-@media only screen and (min-width: 767px){
-    .AppLeftSidebarRemove{
-        display: none;
-    }
-    .AppLeftSidebar{
         margin-top: 20px;
         padding-top: 10px;
         // background: rgb(253, 250, 250);
@@ -257,18 +228,18 @@
             margin: 0 auto;
             margin-top: 10px;
             border-top: 1px solid rgb(216, 216, 216);
-            width: 70%;
+            width: 60%;
             transition: transform 0.5s;
 
             .ColorIcons{
+                padding-top: 10px;
                 i{
                     padding: 7px;
                 }
-                // i:hover{
-                //     font-size: 20px;
-                //     padding-top: 15px;
-                //     padding-bottom: 0;
-                // }
+                i:hover{
+                    border: rgb(250, 141, 69) 1px solid;
+                    border-radius: 50%;
+                }
             }
         }
 
@@ -294,7 +265,7 @@
             margin: 0 auto;
             margin-top: 10px;
             border-top: 1px solid rgb(216, 216, 216);
-            width: 70%;
+            width: 60%;
             transition: transform 0.5s;
 
             h4{
@@ -341,7 +312,7 @@
             margin: 0 auto;
             margin-top: 10px;
             border-top: 1px solid rgb(216, 216, 216);
-            width: 70%;
+            width: 60%;
             transition: transform 0.5s;
 
             .PriceIcons{
@@ -360,7 +331,7 @@
         .SellOff{
             margin: 0 auto;
             margin-top: 10px;
-            width: 70%;
+            width: 60%;
             text-align: left;
 
             .SidebarSellOffHeading{
@@ -371,23 +342,265 @@
         .ClearAll{
             color: #FF7865;
             width: 60%;
-            padding: 5px;
+            padding: 20px;
             margin: 0 auto;
             h6{
                 font-size: 10px;
                 i{
-                    font-size: 10px;
-                    margin-left: 5px;
+                    font-size: 15px;
+                    margin-left: 20px;
                 }
             }
         }
     }
 }
 
-@media only screen and (max-width: 480px){
+  /*
+    ##Device = Laptops, Desktops
+    ##Screen = B/w 1025px to 1280px
+  */
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+}
+
+  /*
+    ##Device = Tablets, Ipads (portrait)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .AppLeftSidebarRemove{
+        margin-top: 20px;
+        padding-top: 10px;
+        // background: rgb(253, 250, 250);
+
+        .Filter-Close{
+            display: none;
+        }
+        h1{
+            font-size: 130%;
+        }
+
+        h4{
+            font-size: 110%;
+            font-weight: 600;
+        }
+
+        .hide{
+            display: none;
+        }
+
+        .make-small{
+            font-size: 10px;
+        }
+
+        .SidebarColorsHeading{
+            display: inline;
+            text-align: left;
+
+            .SidebarButton{
+                display: inline;
+                margin: 0 0 0 30%;
+
+                .ColorButton{
+                        margin-left: auto;
+                        margin-right: 0;
+                        background: transparent;
+                        border: 0px;
+                        box-shadow: none;
+                }
+            }
+        }
+
+        .Colors{
+            margin: 0 auto;
+            margin-top: 10px;
+            border-top: 1px solid rgb(216, 216, 216);
+            width: 60%;
+            transition: transform 0.5s;
+
+            .ColorIcons{
+                padding-top: 10px;
+                i{
+                    padding: 7px;
+                }
+                i:hover{
+                    border: rgb(250, 141, 69) 1px solid;
+                    border-radius: 50%;
+                }
+            }
+        }
+
+        .SidebarFiltersHeading{
+            display: inline;
+            text-align: left;
+
+            .SidebarFilterButton{
+                display: inline;
+                margin: 0 0 0 30%;
+
+                .FilterButton{
+                        margin-left: auto;
+                        margin-right: 0;
+                        background: transparent;
+                        border: 0px;
+                        box-shadow: none;
+                }
+            }
+        }
+
+        .Filters{
+            margin: 0 auto;
+            margin-top: 10px;
+            border-top: 1px solid rgb(216, 216, 216);
+            width: 60%;
+            transition: transform 0.5s;
+
+            h4{
+                display: block;
+                padding-left: 10px;
+                text-align: left;
+            }
+
+            .checkbox-group{
+                padding-left: 20%;
+                text-align: left;
+                font-size: 15px;
+                padding-top: 5px;
+
+                .checkboxes{
+                    font-size: 80%;
+                }
+            }
+        }
+
+        .SidebarSeparator{
+            padding-top: 20px;
+        }
+
+        .SidebarPriceHeading{
+            display: inline;
+            text-align: left;
+
+            .SidebarPriceButton{
+                display: inline;
+                margin: 0 0 0 30%;
+
+                .PriceButton{
+                        margin-left: auto;
+                        margin-right: 0;
+                        background: transparent;
+                        border: 0px;
+                        box-shadow: none;
+                }
+            }
+        }
+
+        .Price{
+            margin: 0 auto;
+            margin-top: 10px;
+            border-top: 1px solid rgb(216, 216, 216);
+            width: 60%;
+            transition: transform 0.5s;
+
+            .PriceIcons{
+                i{
+                    padding: 20px;
+                }
+            }
+
+            .AppSlider{
+                margin: 0 auto;
+                padding-top: 10px;
+                width: 60%;
+            }
+        }
+
+        .SellOff{
+            margin: 0 auto;
+            margin-top: 10px;
+            width: 60%;
+            text-align: left;
+
+            .SidebarSellOffHeading{
+                display: inline;
+            }
+        }
+
+        .ClearAll{
+            color: #FF7865;
+            width: 60%;
+            padding: 20px;
+            margin: 0 auto;
+            h6{
+                font-size: 10px;
+                i{
+                    font-size: 15px;
+                    margin-left: 20px;
+                }
+            }
+        }
+    }
+}
+
+  /*
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+}
+
+  /*
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+}
+
+  /*
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+  */
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .clickButton{
+        display: inline;
+        background-color: rgb(245, 245, 245);
+        // margin-left: 50%;
+        width: 60%;
+        background: white;
+    }
+
     .AppLeftSidebar{
-        margin-top: 0;
-        padding-top: 0;
+        display: none;
+    }
+
+    .AppLeftSidebarRemove{
+        width: 250px;
+        height: 100%; /* 100% Full-height */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: rgb(253, 253, 253);
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 100px; /* Place content 60px from the top */
+        transition: 0.5s;
+        transition: margin-left .5s;
+
+        margin-top: 100px;
+        padding-top: 10px;
+        // background: rgb(253, 250, 250);
+
+        .Filter-Close{
+            padding: 5px;
+            padding-right: 10px;
+        }
 
         h1{
             font-size: 130%;
@@ -428,19 +641,18 @@
             margin: 0 auto;
             margin-top: 10px;
             border-top: 1px solid rgb(216, 216, 216);
-            width: 50%;
+            width: 60%;
             transition: transform 0.5s;
 
             .ColorIcons{
+                padding-top: 10px;
                 i{
-                    font-size: 15px;
-                    padding: 10px;
+                    padding: 7px;
                 }
-                // i:hover{
-                //     font-size: 20px;
-                //     padding-top: 15px;
-                //     padding-bottom: 0;
-                // }
+                i:hover{
+                    border: rgb(250, 141, 69) 1px solid;
+                    border-radius: 50%;
+                }
             }
         }
 
@@ -466,7 +678,7 @@
             margin: 0 auto;
             margin-top: 10px;
             border-top: 1px solid rgb(216, 216, 216);
-            width: 50%;
+            width: 60%;
             transition: transform 0.5s;
 
             h4{
@@ -488,7 +700,7 @@
         }
 
         .SidebarSeparator{
-            padding-top: 5px;
+            padding-top: 20px;
         }
 
         .SidebarPriceHeading{
@@ -513,7 +725,7 @@
             margin: 0 auto;
             margin-top: 10px;
             border-top: 1px solid rgb(216, 216, 216);
-            width: 50%;
+            width: 60%;
             transition: transform 0.5s;
 
             .PriceIcons{
@@ -525,22 +737,14 @@
             .AppSlider{
                 margin: 0 auto;
                 padding-top: 10px;
-                width: 60px;
-
-                    input{
-                        display:inline;
-                        float:left;
-                        width: 60%;
-                    }
-
-
+                width: 60%;
             }
         }
 
         .SellOff{
             margin: 0 auto;
             margin-top: 10px;
-            width: 70%;
+            width: 60%;
             text-align: left;
 
             .SidebarSellOffHeading{
@@ -551,42 +755,15 @@
         .ClearAll{
             color: #FF7865;
             width: 60%;
-            padding: 0;
+            padding: 20px;
             margin: 0 auto;
             h6{
-            }
-                font-size: 12px;
+                font-size: 10px;
                 i{
                     font-size: 15px;
                     margin-left: 20px;
                 }
             }
-
-    }
-}
-
-@media screen and (max-height: 450px) {
-    .AppLeftSidebar {padding-top: 15px;}
-}
-
-@media only screen and (max-width: 425px){
-    .clickButton{
-        display: inline;
-        background: rgb(245, 245, 245);
-        margin-left: 50%;
-    }
-
-    .AppLeftSidebar{
-        width: 250px;
-        height: 100%; /* 100% Full-height */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Stay on top */
-        top: 0; /* Stay at the top */
-        left: 0;
-        background-color: rgb(250, 250, 250); /* Black*/
-        overflow-x: hidden; /* Disable horizontal scroll */
-        padding-top: 100px; /* Place content 60px from the top */
-        transition: 0.5s;
-        transition: margin-left .5s;
+        }
     }
 }
