--- a/src/style/components/_appcarousel.scss
+++ b/src/style/components/_appcarousel.scss
@@ -4,11 +4,61 @@
         display: none;
     }
     .SofaImageItem{
-        .SofaImage{
-            width: 90%;
-            margin: 0;
-            overflow: hidden;
-            margin: 0 auto;
+        .Image-Grid{
+            .Carousel-Content{
+                background: #FFF6F0;
+            }
+            .Main-Content-Col{
+                text-align: left;
+                margin-top: 50px;
+                padding: 40px;
+                h3{
+                    font-weight: 600;
+                    color: #FF7865;
+                }
+                h1{
+                    font-weight: 800;
+                    .sale-span{
+                        font-size: 5rem;
+                    }
+                }
+                .PercentOff-Image{
+                    width: 70px;
+                    height: 70px;
+                    margin-top: -30px;
+                }
+                p{
+                    width: 60%;
+                    text-align: justify;
+                }
+                .Explore-Button{
+                    margin-top: 20px;
+                    border: 0;
+                    border-radius: 0;
+                    box-shadow: none;
+                    background-image: none;
+                    color: white;
+                    background: #FF7865;
+                    width: 250px;
+                    height: 60px;
+                    font-style: none;
+                    font-size: 15px;
+                    text-shadow: none;
+                }
+            }
+            .Main-Image-Col{
+                padding: 0;
+            }
+            .SofaImage{
+                width: 100%;
+                margin: 0;
+                overflow: hidden;
+                object-fit: cover;
+            }
+            .Main-Image{
+                margin:0;
+                width: 100%;
+            }
         }
     }
 }
