--- a/src/style/components/_appcarousel.scss
+++ b/src/style/components/_appcarousel.scss
@@ -1,8 +1,32 @@
 .AppCarousel{
-    .carousel-control.left,
-    .carousel-control.right {
-        display: none;
+    // .carousel-control.left,
+    // .carousel-control.right {
+    //     display: none;
+    // }
+    .carousel-indicators .active {
+        width: 12px;
+        height: 12px;
+        margin: 0;
+        background-color: #FF7865;
     }
+
+    .carousel-indicators {
+        margin-top: 20px;
+        bottom: 0;
+        li {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            margin: 1px;
+            text-indent: -999px;
+            cursor: pointer;
+            background-color: #ccc;
+            background-color: rgba(0,0,0,0);
+            border: 1px solid #FF7865;
+            border-radius: 10px;
+        }
+    }
+
     .SofaImageItem{
         .Image-Grid{
             .Carousel-Content{
@@ -25,7 +49,8 @@
                 .PercentOff-Image{
                     width: 70px;
                     height: 70px;
-                    margin-top: -30px;
+                    margin-top: -5%;
+                    margin-right: 35%;
                 }
                 p{
                     width: 60%;
@@ -75,7 +100,20 @@
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-
+    .AppCarousel{
+        .SofaImageItem{
+            .Image-Grid{
+                .Main-Content-Col{
+                    .PercentOff-Image{
+                        width: 70px;
+                        height: 70px;
+                        margin-top: -30px;
+                        margin-right: 30%;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
@@ -100,6 +138,7 @@
                         width: 70px;
                         height: 70px;
                         margin-top: -30px;
+                        margin-right: 10%;
                     }
                     .Explore-Button{
                         margin-top: 7px;
@@ -143,6 +182,7 @@
                         width: 70px;
                         height: 70px;
                         margin-top: -30px;
+                        margin-right: 5%;
                     }
                     .Explore-Button{
                         margin-top: 7px;
@@ -157,6 +197,44 @@
                         font-style: none;
                         font-size: 15px;
                         text-shadow: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 375px) {
+    .AppCarousel{
+        .carousel-indicators {
+            bottom: -15px;
+        }
+        .SofaImageItem{
+            .Image-Grid{
+                .Main-Content-Col{
+                    padding: 15px;
+                    .PercentOff-Image{
+                        width: 70px;
+                        height: 70px;
+                        margin-top: -30px;
+                        margin-right: 2%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 320px) {
+    .AppCarousel{
+        .SofaImageItem{
+            .Image-Grid{
+                .Main-Content-Col{
+                    .PercentOff-Image{
+                        width: 70px;
+                        height: 70px;
+                        margin-top: -30px;
+                        margin-right: 0%;
                     }
                 }
             }
