--- a/src/style/components/_appcontent.scss
+++ b/src/style/components/_appcontent.scss
@@ -32,6 +32,12 @@
                 &:hover,&:active{
                     color: #FF7865;
                 }
+                &:focus{
+                    outline: 0;
+                }
+            }
+            .active{
+                color: #FF7865;
             }
         }
     }
@@ -53,11 +59,11 @@
         margin-top: 20px;
         margin-bottom: 10px;
         padding: 10px;
-        width: 250px;
         box-shadow: none;
         background: #FF7865;
         text-shadow: none;
-
+        color: white;
+        font-size: 10px;
         &:hover,&:active{
             background: rgb(255, 112, 94);
         }
