--- a/src/style/components/_appnavbar.scss
+++ b/src/style/components/_appnavbar.scss
@@ -6,7 +6,7 @@
         background: white;
         border: 0;
         height: 80px;
-        z-index: 100;
+        z-index: 120;
 
         .Nav-Toggle{
             margin-top: 35px;
@@ -57,8 +57,10 @@
                 padding-left: 20px;
                 .App-Nav-Item{
                     i{
-
                         color: rgb(61, 61, 61);
+                        &:hover{
+                            color: rgb(255, 112, 94);
+                        }
                     }
                 }
             }
@@ -87,7 +89,7 @@
             background: white;
             border: 0;
             height: 80px;
-            z-index: 100;
+            z-index: 120;
 
             .Nav-Toggle{
                 margin-top: 35px;
